k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "alexa-node-app-ingress"
  annotations:
    app: "alexa-node-app"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: ""
    alb.ingress.kubernetes.io/ssl-policy: 
    alb.ingress.kubernetes.io/tags: env=prod
spec:
  ingressClassName: alb
  rules:
  - host: "your.domain.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "node-app-service" 
            port:
              number: 3001
